--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,15 @@
     "xstddef": "cpp",
     "xstring": "cpp",
     "xtr1common": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "atomic": "cpp",
+    "chrono": "cpp",
+    "functional": "cpp",
+    "list": "cpp",
+    "ratio": "cpp",
+    "xthread": "cpp",
+    "thread": "cpp",
+    "unordered_map": "cpp",
+    "xhash": "cpp"
   }
 }
